--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 
 .container {
     text-align: center;
-    background-color: #ffffffe7;
+    background-color: hsla(0, 0%, 100%, 0.808);
     color: #505152;
     padding: 1rem;
     border-radius: .5rem;
@@ -23,22 +23,43 @@ body {
     height: 300px;
 }
 
+.form {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+    
+    
+
 input {
-    border-radius: .5rem;
+    background-color: #fff;
+    border-radius: .5rem 0 0 .5rem;
     padding: .5rem;
     font-size: 1rem;
-    margin-top: 2rem;
-    width: 50%;
+    width: 20%;
+    border-color: rgb(250, 250, 84);
+    border: none;
 }
+    
 
 button {
-   
-    border-radius: .5rem;
+    border-radius:0 .5rem .5rem 0;
     padding: .5rem 1rem;
     font-size: 1rem;
-    margin-top: .5rem;
     cursor: pointer;
     background-color: rgb(250, 250, 84);
+    border: none;
+}
+
+.btn-play {
+    border-radius: .5rem;
+    height: 3rem;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+    color: #505152;
 }
 
 p {
@@ -51,13 +72,16 @@ p {
 }
 
 .guess-list {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
     text-align: center;
-    background-color: #ffffffe7;
+    background-color: hsla(0, 0%, 100%, 0.808);
     color: #505152;
     padding: 1rem; 
     border-radius: .5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin-left: 1rem;
     height: 300px;
-
 }
+    
+
